--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,12 @@ panic = "abort"
 
 [dependencies]
 glob = "0.3.0"
+handlebars = "3.0.1"
 rst_parser = "0.3.1"
 rst_renderer = "0.3.1"
+serde = "*"
+serde_derive = "*"
+serde_json = "1.0.*"
 
 [dev-dependencies.cargo-husky]
 version = "1"
