--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,24 +24,40 @@ edition = "2018"
 gitlab = { repository = "grauwoelfchen/beta", branch = "master" }
 
 [lib]
-name = "beta"
+name = "libbeta"
 path = "src/lib.rs"
 
 [[bin]]
 name = "beta"
 path = "src/main.rs"
 
+[[bin]]
+name = "beta-server"
+path = "src/bin/server.rs"
+
 [profile.release]
 panic = "abort"
 
 [dependencies]
+futures = "0.3"
 glob = "0.3.0"
 handlebars = "3.0.1"
+hyper = "0.13.*"
 rst_parser = "0.3.1"
 rst_renderer = "0.3.1"
 serde = "*"
 serde_derive = "*"
 serde_json = "1.0.*"
+
+[dependencies.tokio]
+version = "0.2.*"
+default-features = false
+features = ["fs", "macros", "stream"]
+
+[dependencies.tokio-util]
+version = "0.3.1"
+default-features = false
+features = ["codec"]
 
 [dev-dependencies.cargo-husky]
 version = "1"
