--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,9 +49,9 @@ handlebars = "3.0.1"
 hyper = "0.13.*"
 rst_parser = "0.3.1"
 rst_renderer = "0.3.1"
-serde = "*"
-serde_derive = "*"
-serde_json = "1.0.*"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
 
 [dependencies.tokio]
 version = "0.2.*"
