--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ path = "test/test.rs"
 panic = "abort"
 
 [dependencies]
+document_tree = "0.3.0"
 futures = "0.3"
 glob = "0.3.0"
 handlebars = "3.0.1"
@@ -54,6 +55,11 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 toml = "0.5"
+
+[dependencies.syntect]
+version = "4.1"
+default-features = false
+features = ["default-fancy"]
 
 [dependencies.tokio]
 version = "0.2.*"
