Fix same binary name issue on generate doc

--- a/src/nib-cli/Cargo.toml
+++ b/src/nib-cli/Cargo.toml
@@ -18,6 +18,7 @@ gitlab = { repository = "grauwoelfchen/nib", branch = "master" }
 
 [[bin]]
 name = "nib"
+doc = false
 path = "src/main.rs"
 
 [dependencies]
