--- a/src/nib-cli/Cargo.toml
+++ b/src/nib-cli/Cargo.toml
@@ -22,7 +22,7 @@ doc = false
 path = "src/main.rs"
 
 [dependencies]
-nib = { path = "../nib", version = "0.0.7" }
+nib = "0.0.7"
 toml = "0.5"
 
 [dev-dependencies.cargo-husky]
