--- a/src/nib-cli/Cargo.toml
+++ b/src/nib-cli/Cargo.toml
@@ -22,7 +22,8 @@ doc = false
 path = "src/main.rs"
 
 [dependencies]
-nib = "0.0.8"
+# nib = "0.0.8"
+nib = { path = "../nib" }
 toml = "0.5"
 
 [dev-dependencies.cargo-husky]
